--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(path: ':toasterlibrary')
-//    implementation 'com.github.ramagiripurnachander:Toaster:1.0'
+//    implementation 'com.github.ramagiripurnachander:toaster:1.0'
 }
